--- a/platform/themes/namjahon/lang/uz.json
+++ b/platform/themes/namjahon/lang/uz.json
@@ -37,7 +37,7 @@
     "Galleries": "Galleries",
     "Google map": "Google map",
     "Has error when verify email!": "Has error when verify email!",
-    "Home": "Home",
+    "Home": "Bosh sahifa",
     "If you need help, contact us at :mail.": "If you need help, contact us at :mail.",
     "Login": "Login",
     "Login with social networks": "Login with social networks",
