--- a/platform/themes/namjahon/lang/uz.json
+++ b/platform/themes/namjahon/lang/uz.json
@@ -56,7 +56,7 @@
     "Payment info": "Payment info",
     "Payment with PayPal": "Payment with PayPal",
     "Payment with Stripe": "Payment with Stripe",
-    "Phone": "Phone",
+    "Phone": "Telefon",
     "Please try again in a few minutes, or alternatively return to the homepage by <a href=\":link\">clicking here</a>.": "Please try again in a few minutes, or alternatively return to the homepage by <a href=\":link\">clicking here</a>.",
     "Popular tags": "Popular tags",
     "Previous Post": "Previous Post",
